webaddress refactor. OPEN - task 27: Declarative email system http://github.com/soluvas/soluvas-framework/issues/issue/27

--- a/site/README.textile
+++ b/site/README.textile
@@ -31,7 +31,7 @@ bc.. <?xml version="1.0" encoding="UTF-8"?>
 			<entry key="clientId" value="${clientId}"/>
 			<entry key="tenantEnv" value="${tenantEnv}"/>
 			<entry key="tenantId" value="${tenantId}"/>
-			<entry key="suppliedClass" value="org.soluvas.web.site.webaddress.WebAddress" />
+			<entry key="suppliedClass" value="org.soluvas.commons.WebAddress" />
 			<entry key="layer" value="application" />
 		</service-properties>
 	</osgi:service>
